{{$NEXT}}

0.11      2011-02-18 11:00:51 Europe/London
    - Fixed CommitBuild release messages
    - Slightly improved docs
    - No longer produces CommitBuilds for every build...
    - Now uses [Bootstrap::lib] to reduce the build dance
    - Got README handling as I want it, finally
    - Realised that Changes handling is now wrong - needs fixing later

0.07      2011-02-11 13:22:07 Europe/London
    - Made [Git::CommitBuild] push to a cpan branch
    - Removed the [CopyReadmeFromBuild] due to issues

0.06      2011-02-11 13:05:57 Europe/London
    - Added [CopyReadmeFromBuild]
    - Added [Git::CommitBuild]
    - Made pod coverage and no tabs tests optional

0.05      2011-02-10 13:43:53 Europe/London
    - Rehased based on MARCEL bundle
    - Better POD weaving

0.04      2011-02-07 13:17:32 Europe/London
    - Fixed stupid mistake where managed to put FLORAs info back in
    - And similarly for the rafl github user...
    - Minor doc updates.

0.03      2011-02-05 22:34:01 Europe/London
    - Now uses AutoPrereqs instead of deprecated AutoPrereq
    - Uses Git::NextRelease module, with appropriate regex

0.02      2011-02-05 16:27:58 Europe/London
    - Moved to use itself for release

0.01      2011-02-05 16:21:31 Europe/London
    - Initial construction of module