@@ -1,4 +1,5 @@
 {{$NEXT}}
+    - Now uses OurPkgVersion (requires source modules change)
 
 0.11      2011-02-18 11:00:51 Europe/London
     - Fixed CommitBuild release messages
